fleet/api-gateway/templates/edge-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-gateway-dashboard-basic-auth
  namespace: apisix
spec:
  basicAuth:
    secret: api-gateway-dashboard-basic-auth
    removeHeader: true
    realm: APISIX Dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-public
  namespace: apisix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: acmeresolver
spec:
  ingressClassName: traefik
  rules:
    - host: api.spainip.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apisix-gateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-dashboard
  namespace: apisix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: acmeresolver
    traefik.ingress.kubernetes.io/router.middlewares: apisix-api-gateway-dashboard-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api-admin.spainip.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apisix-admin
                port:
                  number: 9180
